@@ -10,6 +10,7 @@ dillo-2.2 [??]
  - Fix X11 coordinate overflows with huge borders.
  - Improve CSS font parsing.
  - Enable font face setting via <font> element.
+ - Ignore XML comment markers in CSS.
    Patch: Johannes Hofmann
 +- Cleaned up system includes in dpid directory.
  - Fixed CustProgressBox() for systems without weak symbols.
